k8s-manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gowebapp
  labels:
    app: gowebapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gowebapp   
  template:
    metadata:
      labels:
        app: gowebapp
    spec:
      containers:
      - name: gowebapp
        image: dockerysf/goweb:v1
        ports:
        - containerPort: 8080
