k8s-manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gowebapp
spec:
  selector:
    app: gowebapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
