k8s-manifest/ingress.yml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowebapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: my-gowebapp.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gowebapp
            port:
              number: 80
